// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Choice Grouped 1`] = `
<div
  className="sc-hKwDye pkbhy"
>
  <select
    aria-label="ARIA label"
    className="sc-eCImPb jKohRv"
    onChange={[Function]}
  >
    <optgroup
      label="Group 1"
    >
      <option>
        Option 1
      </option>
      <option>
        Option 2
      </option>
    </optgroup>
    <optgroup
      label="Group 2"
    >
      <option>
        Option 3
      </option>
      <option>
        Option 4
      </option>
    </optgroup>
  </select>
  <i
    className="far fa-chevron-down"
  />
</div>
`;

exports[`Storyshots Choice Simple 1`] = `
<div
  className="sc-hKwDye pkbhy"
>
  <select
    aria-label="ARIA label"
    className="sc-eCImPb jKohRv"
    onChange={[Function]}
  >
    <option>
      Option 1
    </option>
    <option>
      Option 2
    </option>
  </select>
  <i
    className="far fa-chevron-down"
  />
</div>
`;

exports[`Storyshots Choice Some Disabled 1`] = `
<div
  className="sc-hKwDye pkbhy"
>
  <select
    aria-label="ARIA label"
    className="sc-eCImPb jKohRv"
    onChange={[Function]}
  >
    <option
      disabled={true}
    >
      Option 1
    </option>
    <option>
      Option 2
    </option>
  </select>
  <i
    className="far fa-chevron-down"
  />
</div>
`;

exports[`Storyshots Choices Normal 1`] = `
<div
  className="sc-jRQBWg gqVzFW"
>
  <span
    className="sc-gKclnd fRIwcw"
  >
    I am a
  </span>
  <div
    className="sc-hKwDye pkbhy"
  >
    <select
      aria-label="Position"
      className="sc-eCImPb jKohRv"
      onChange={[Function]}
    >
      <optgroup
        label="Engineering"
      >
        <option>
          Front End Engineer I
        </option>
        <option>
          Front End Engineer II
        </option>
        <option>
          Front End Engineer III
        </option>
        <option>
          Senior Front End Engineer
        </option>
        <option>
          Lead Front End Engineer
        </option>
        <option>
          Back End Engineer I
        </option>
        <option>
          Back End Engineer II
        </option>
        <option>
          Back End Engineer III
        </option>
        <option>
          Senior Back End Engineer
        </option>
        <option>
          Lead Back End Engineer
        </option>
        <option>
          DevOps Engineer I
        </option>
        <option>
          DevOps Engineer II
        </option>
        <option>
          DevOps Engineer III
        </option>
        <option>
          Senior DevOps Engineer
        </option>
        <option>
          Lead DevOps Engineer
        </option>
      </optgroup>
      <optgroup
        label="Customer Success"
      >
        <option>
          Customer Success Champion I
        </option>
        <option>
          Customer Success Champion II
        </option>
        <option>
          Senior Customer Success Champion
        </option>
        <option>
          Lead Customer Success Champion
        </option>
      </optgroup>
      <optgroup
        label="Administration"
      >
        <option>
          Office manager
        </option>
      </optgroup>
    </select>
    <i
      className="far fa-chevron-down"
    />
  </div>
  <span
    className="sc-gKclnd fRIwcw"
  >
    and have been 
    an engineer
     in the Sparksuite family for
  </span>
  <div
    className="sc-hKwDye pkbhy"
  >
    <select
      aria-label="Tenure"
      className="sc-eCImPb jKohRv"
      onChange={[Function]}
      value="less than one year"
    >
      <option
        disabled={false}
      >
        less than one year
      </option>
      <option
        disabled={false}
      >
        one to two years
      </option>
      <option
        disabled={true}
      >
        two to three years
      </option>
      <option
        disabled={true}
      >
        three to four years
      </option>
      <option
        disabled={true}
      >
        four to five years
      </option>
      <option
        disabled={true}
      >
        five to six years
      </option>
      <option
        disabled={true}
      >
        more than six years
      </option>
    </select>
    <i
      className="far fa-chevron-down"
    />
  </div>
</div>
`;

exports[`Storyshots Compensation Normal 1`] = `
<div
  className="sc-iCfMLu QDVzU"
>
  <figure
    className="sc-furwcr glKBuh"
    style={
      Object {
        "fontSize": "1rem",
      }
    }
  >
    <div
      className="sc-jrQzAO kQxwcz"
      style={
        Object {
          "color": undefined,
        }
      }
    >
      $88,000
    </div>
    <figcaption
      className="sc-kDTinF fvWamc"
    >
      ANNUAL SALARY
    </figcaption>
  </figure>
  <div
    className="sc-iqseJM jnvQwA"
  >
    <div
      className="sc-crHmcD dHClYz"
    >
      plus
    </div>
  </div>
  <div
    className="sc-egiyK icwwXE"
  >
    <div>
      <figure
        className="sc-furwcr glKBuh"
        style={
          Object {
            "fontSize": "0.8rem",
          }
        }
      >
        <div
          className="sc-jrQzAO kQxwcz"
          style={
            Object {
              "color": "#67b1d6",
            }
          }
        >
          50%
        </div>
        <figcaption
          className="sc-kDTinF fvWamc"
        >
          OF BASE HEALTH PLAN PREMIUM
          <a
            aria-label="Learn more"
            href="https://handbook.sparksuite.com/benefits/health.html"
            rel="noopener noreferrer"
            target="_blank"
          >
            <i
              className="far fa-info-circle"
            />
          </a>
        </figcaption>
      </figure>
      <p>
        Company contribution of 50% of the cost of your base health plan’s premium toward any of the health plans offered. We also offer vision and dental plans, plus
         
        <span
          className="sc-bqiRlB hHoPBy"
        >
          HSAs and FSAs
        </span>
         to help reduce your taxes.
      </p>
    </div>
    <div>
      <figure
        className="sc-furwcr glKBuh"
        style={
          Object {
            "fontSize": "0.8rem",
          }
        }
      >
        <div
          className="sc-pVTFL kBlOFw"
        >
          UP TO
        </div>
        <div
          className="sc-jrQzAO kQxwcz"
          style={
            Object {
              "color": "#67b1d6",
            }
          }
        >
          $3,520
        </div>
        <figcaption
          className="sc-kDTinF fvWamc"
        >
          MATCHING 401(k) CONTRIBUTIONS
          <a
            aria-label="Learn more"
            href="https://handbook.sparksuite.com/benefits/401(k).html"
            rel="noopener noreferrer"
            target="_blank"
          >
            <i
              className="far fa-info-circle"
            />
          </a>
        </figcaption>
      </figure>
      <p>
        Company matching up to 4%, beginning with your first paycheck. Plus, your savings are invested through an ultra low-fee provider, which could net you hundreds of thousands of dollars more than typical 401(k) plans.
      </p>
    </div>
  </div>
  <div
    className="sc-iqseJM jnvQwA"
  >
    <div
      className="sc-crHmcD dHClYz"
    >
      along with
    </div>
  </div>
  <div
    className="sc-ksdxgE fGDdFz"
  >
    <div>
      <i
        className="far fa-fw fa-sliders-up"
      />
       Flexible working hours
    </div>
    <div>
      <i
        className="far fa-fw fa-house-building"
      />
       Flexible remote work
    </div>
    <div>
      <i
        className="far fa-fw fa-pot-food"
      />
       Free-lunch Fridays
    </div>
    <div>
      <i
        className="far fa-fw fa-taco"
      />
       Taco Tuesdays
    </div>
    <div>
      <i
        className="far fa-fw fa-calendar-day"
      />
       Generous paid time off
    </div>
    <div>
      <i
        className="far fa-fw fa-house-person-return"
      />
       Healthy work-life balance
    </div>
    <div>
      <i
        className="far fa-fw fa-chair-office"
      />
       Incredible office
    </div>
    <div>
      <i
        className="far fa-fw fa-golf-flag-hole"
      />
       Company outings
    </div>
    <div>
      <i
        className="far fa-fw fa-coffee-bean"
      />
       Craft coffee
    </div>
    <div>
      <i
        className="far fa-fw fa-avocado"
      />
       Delicious snacks
    </div>
    <span>
      …and all these other
       
      <a
        href="https://handbook.sparksuite.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        awesome benefits & perks
      </a>
      .
    </span>
  </div>
</div>
`;

exports[`Storyshots Container Normal 1`] = `
<div
  className="sc-iCfMLu QDVzU"
/>
`;

exports[`Storyshots Divider Longer 1`] = `
<div
  className="sc-iqseJM jnvQwA"
>
  <div
    className="sc-crHmcD dHClYz"
  >
    a much longer example
  </div>
</div>
`;

exports[`Storyshots Divider Normal 1`] = `
<div
  className="sc-iqseJM jnvQwA"
>
  <div
    className="sc-crHmcD dHClYz"
  >
    example
  </div>
</div>
`;

exports[`Storyshots Figure Basic 1`] = `
<figure
  className="sc-furwcr glKBuh"
  style={
    Object {
      "fontSize": "1rem",
    }
  }
>
  <div
    className="sc-jrQzAO kQxwcz"
    style={
      Object {
        "color": undefined,
      }
    }
  >
    $123,456
  </div>
  <figcaption
    className="sc-kDTinF fvWamc"
  >
    EXAMPLE SUBTITLE
  </figcaption>
</figure>
`;

exports[`Storyshots Figure Custom Color 1`] = `
<figure
  className="sc-furwcr glKBuh"
  style={
    Object {
      "fontSize": "1rem",
    }
  }
>
  <div
    className="sc-jrQzAO kQxwcz"
    style={
      Object {
        "color": "#f00",
      }
    }
  >
    $123,456
  </div>
  <figcaption
    className="sc-kDTinF fvWamc"
  >
    EXAMPLE SUBTITLE
  </figcaption>
</figure>
`;

exports[`Storyshots Figure Info Icon 1`] = `
<figure
  className="sc-furwcr glKBuh"
  style={
    Object {
      "fontSize": "1rem",
    }
  }
>
  <div
    className="sc-jrQzAO kQxwcz"
    style={
      Object {
        "color": undefined,
      }
    }
  >
    $123,456
  </div>
  <figcaption
    className="sc-kDTinF fvWamc"
  >
    EXAMPLE SUBTITLE
    <a
      aria-label="Learn more"
      href="https://www.sparksuite.com/"
      rel="noopener noreferrer"
      target="_blank"
    >
      <i
        className="far fa-info-circle"
      />
    </a>
  </figcaption>
</figure>
`;

exports[`Storyshots Figure Smaller 1`] = `
<figure
  className="sc-furwcr glKBuh"
  style={
    Object {
      "fontSize": "0.8rem",
    }
  }
>
  <div
    className="sc-jrQzAO kQxwcz"
    style={
      Object {
        "color": undefined,
      }
    }
  >
    $123,456
  </div>
  <figcaption
    className="sc-kDTinF fvWamc"
  >
    EXAMPLE SUBTITLE
  </figcaption>
</figure>
`;

exports[`Storyshots Figure Up To 1`] = `
<figure
  className="sc-furwcr glKBuh"
  style={
    Object {
      "fontSize": "1rem",
    }
  }
>
  <div
    className="sc-pVTFL kBlOFw"
  >
    UP TO
  </div>
  <div
    className="sc-jrQzAO kQxwcz"
    style={
      Object {
        "color": undefined,
      }
    }
  >
    $123,456
  </div>
  <figcaption
    className="sc-kDTinF fvWamc"
  >
    EXAMPLE SUBTITLE
  </figcaption>
</figure>
`;

exports[`Storyshots Footer Normal 1`] = `
<footer
  className="sc-hBUSln gNMGdG"
>
  <div>
    <a
      href="https://www.sparksuite.com/"
      rel="noopener noreferrer"
      target="_blank"
    >
      Company website
    </a>
    <a
      href="https://blog.sparksuite.com/"
      rel="noopener noreferrer"
      target="_blank"
    >
      Blog
    </a>
    <a
      href="https://sparksuite.careers/"
      rel="noopener noreferrer"
      target="_blank"
    >
      Careers
    </a>
    <a
      href="https://handbook.sparksuite.com/"
      rel="noopener noreferrer"
      target="_blank"
    >
      Employee handbook
    </a>
    <a
      href="https://github.com/sparksuite/salary-calculator"
      rel="noopener noreferrer"
      target="_blank"
    >
      GitHub repo
    </a>
  </div>
  <img
    alt="Sparksuite logo"
    src="/logo.png"
  />
</footer>
`;

exports[`Storyshots Gradient Normal 1`] = `
<div
  className="sc-bdvvtL gVVNsX"
/>
`;

exports[`Storyshots Header Normal 1`] = `
<header>
  <h1
    className="sc-gsDKAQ dGnJJj"
  >
    Sparksuite’s Salary Calculator
  </h1>
  <h2
    className="sc-dkPtRN fEFnJl"
  >
    Transparent, predictable, & holistic compensation
  </h2>
</header>
`;

exports[`Storyshots Position description Normal 1`] = `
<div
  className="sc-iCfMLu QDVzU"
>
  A level one front end engineer is usually just beginning their professional career in front end software engineering and is developing a strong foundational knowledge of the fundamentals and familiarity with the technologies they use. They’re capable of completing tasks given to them with some direction and oversight. Reviews typically require more iterations to achieve high quality, intuitive, and polished code contributions.
</div>
`;
